"Update notify policy"

--- a/tacker/tosca/lib/tacker_defs.yaml
+++ b/tacker/tosca/lib/tacker_defs.yaml
@@ -247,6 +247,10 @@ policy_types:
     derived_from: tosca.policies.tacker.Failure
     action: log
 
+    tosca.policies.tacker.Failure.Notify:
+      derived_from: tosca.policies.tacker.Failure
+      action: notify
+
   tosca.policies.tacker.Monitoring:
     derived_from: tosca.policies.Root
     properties:
