--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ tacker.tacker.policy.actions =
     log = tacker.vnfm.policy_actions.log.log:VNFActionLog
     log_and_kill = tacker.vnfm.policy_actions.log.log:VNFActionLogAndKill
     vdu_autoheal = tacker.vnfm.policy_actions.vdu_autoheal.vdu_autoheal:VNFActionVduAutoheal
+    notify = tacker.vnfm.policy_actions.notify.notify:VNFActionNotify
 oslo.config.opts =
     tacker.common.config = tacker.common.config:config_opts
     tacker.wsgi = tacker.wsgi:config_opts
