--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ tacker.tacker.policy.actions =
     respawn = tacker.vnfm.policy_actions.respawn.respawn:VNFActionRespawn
     log = tacker.vnfm.policy_actions.log.log:VNFActionLog
     log_and_kill = tacker.vnfm.policy_actions.log.log:VNFActionLogAndKill
+    notify = tacker.vnfm.policy_actions.notify.notify:VNFActionNotify
 oslo.config.opts =
     tacker.common.config = tacker.common.config:config_opts
     tacker.wsgi = tacker.wsgi:config_opts
